# email-triage-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.ps1
env/: email_env.py
server/: app.py
